// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrcidProfileLink renders with all props set 1`] = `
<LinkWithTargetBlank
  as="a"
  className="test"
  href="//orcid.org/0000-0001-8058-0014"
>
  Orcid: 
  <strong>
    0000-0001-8058-0014
  </strong>
</LinkWithTargetBlank>
`;

exports[`OrcidProfileLink renders with only orcid 1`] = `
<LinkWithTargetBlank
  as="a"
  href="//orcid.org/0000-0001-8058-0014"
>
  0000-0001-8058-0014
</LinkWithTargetBlank>
`;
